// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// ------------------------------------
// 0. Cadena, Zonas y Permisos
// ------------------------------------

// Una cadena agrupa zonas. Un restaurante independiente no tiene cadena.
model Chain {
  id            String  @id @default(uuid())
  name          String
  logoUrl       String?
  currency      String  @default("MXN")
  taxRate       Float   @default(16.0)
  suggestedTips String  @default("10,15,20")
  isArchived    Boolean @default(false) // Soft Delete para la cadena entera

  zones         Zone[]
  menuTemplates MenuTemplate[]
  chainStaff    ChainStaff[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// Una zona agrupa restaurantes dentro de una cadena.
// Obligatoria para restaurantes de cadena.
model Zone {
  id      String @id @default(uuid())
  chainId String
  name    String // "Norte", "CDMX", "Occidente"
  isArchived Boolean @default(false) // Soft Delete

  chain              Chain              @relation(fields: [chainId], references: [id], onDelete: Cascade)
  restaurants        Restaurant[]
  zoneMenuOverrides  ZoneMenuOverride[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([chainId])
}

// Personal de cadena/zona con visibilidad jerárquica
enum ChainRole {
  CHAIN_ADMIN  // ve y administra toda la cadena
  ZONE_MANAGER // ve y administra su zona
}

model ChainStaff {
  id      String    @id @default(uuid())
  chainId String
  zoneId  String?   // null = acceso a toda la cadena
  name    String
  role    ChainRole
  /// @deprecated Almacenamiento legacy; el login unificado usa email + passwordHash
  pin     String?
  email   String?   @unique
  passwordHash String?
  isActive Boolean  @default(true)

  chain Chain  @relation(fields: [chainId], references: [id], onDelete: Cascade)
  // zoneId sin FK explícita para no complicar migraciones; validar en app

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([chainId])
  @@index([zoneId])
  @@index([email])
}

// ------------------------------------
// 1. Restaurante y Configuración
// ------------------------------------
model Restaurant {
  id                  String  @id @default(uuid())
  zoneId              String? // null = restaurante independiente (sin cadena)
  name                String
  logoUrl             String?
  address             String?
  welcomeMessage      String?
  currency            String  @default("MXN")
  taxRate             Float   @default(16.0)
  suggestedTips       String  @default("10,15,20")
  allowMobileOrdering Boolean @default(true)
  allowWaiterJoinTables Boolean @default(false)
  isArchived          Boolean @default(false) // Soft Delete (cerrado, histórico)

  zone        Zone?        @relation(fields: [zoneId], references: [id], onDelete: SetNull)
  tables      Table[]
  menuItems   MenuItem[]
  categories  Category[]
  staff       Staff[]
  orders      Order[]
  tableGroups TableGroup[]
  payments   Payment[]

  // Menú de plantilla: puede usar una plantilla de cadena + sus propios overrides
  menuTemplateId  String?
  menuTemplate    MenuTemplate?         @relation(fields: [menuTemplateId], references: [id], onDelete: SetNull)
  itemOverrides   RestaurantMenuOverride[] // overrides específicos de esta sucursal

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([zoneId])
}

// ------------------------------------
// 2. Mesas
// ------------------------------------
enum TableStatus {
  DISPONIBLE
  OCUPADA
  CERRANDO  // cuenta pedida por el anfitrión — no se permiten más órdenes
  SUCIA
}

enum TableGroupStatus {
  ACTIVE
  CLOSED
}

model TableGroup {
  id           String           @id @default(uuid())
  restaurantId String
  createdBy    String           // staffId del mesero que creó el grupo
  status       TableGroupStatus @default(ACTIVE)

  restaurant Restaurant @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  tables     Table[]

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  closedAt  DateTime?

  @@index([restaurantId])
  @@index([status])
}

model Table {
  id           String      @id @default(uuid())
  restaurantId String
  number       Int
  capacity     Int
  qrCode       String      @unique // Ej. X7B9K2
  joinCode     String?               // código 4 chars que el anfitrión comparte; null = mesa vacía
  hostSessionId String?  @unique     // único anfitrión por mesa (relación 1:1)
  status       TableStatus @default(DISPONIBLE)
  posX         Float       @default(80)
  posY         Float       @default(80)
  shape        String      @default("rect") // "rect" | "round"
  groupId      String?
  group        TableGroup? @relation(fields: [groupId], references: [id], onDelete: SetNull)

  restaurant Restaurant @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  hostSession Session?  @relation("TableHost", fields: [hostSessionId], references: [id])
  sessions   Session[]  @relation("TableSessions")
  orders     Order[]
  payments   Payment[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([restaurantId, number])
  @@index([restaurantId])
  @@index([groupId])
}

// ------------------------------------
// 3. Plantilla de Menú (Cadena)
// ------------------------------------

// La cadena define plantillas reutilizables. Una sucursal elige una plantilla
// y puede ajustar precios o esconder platillos a nivel zona o sucursal.
model MenuTemplate {
  id          String  @id @default(uuid())
  chainId     String
  name        String  // "Menú Estándar", "Menú Verano"
  isDefault   Boolean @default(false)

  chain         Chain                  @relation(fields: [chainId], references: [id], onDelete: Cascade)
  categories    TemplateCategory[]
  restaurants   Restaurant[]           // sucursales que usan esta plantilla
  zoneOverrides ZoneMenuOverride[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([chainId])
}

model TemplateCategory {
  id         String @id @default(uuid())
  templateId String
  name       String // "Entradas", "Bebidas"
  order      Int    @default(0)

  template MenuTemplate  @relation(fields: [templateId], references: [id], onDelete: Cascade)
  items    TemplateItem[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([templateId])
}

model TemplateItem {
  id          String  @id @default(uuid())
  categoryId  String
  name        String
  description String?
  basePrice   Float
  imageUrl    String?
  isPopular   Boolean @default(false)
  isArchived  Boolean @default(false) // Soft Delete
  station     Station @default(COCINA)

  category      TemplateCategory         @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  zoneOverrides ZoneMenuOverride[]
  restOverrides RestaurantMenuOverride[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([categoryId])
}

// Override a nivel Zona: aplica a todos los restaurantes de esa zona
// salvo que el restaurante tenga su propio override más específico.
model ZoneMenuOverride {
  id             String  @id @default(uuid())
  zoneId         String
  templateId     String
  templateItemId String

  customPrice Float?   // null = precio base del template
  isSoldOut   Boolean  @default(false)
  isHidden    Boolean  @default(false)

  zone         Zone         @relation(fields: [zoneId], references: [id], onDelete: Cascade)
  template     MenuTemplate @relation(fields: [templateId], references: [id], onDelete: Cascade)
  templateItem TemplateItem @relation(fields: [templateItemId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([zoneId, templateItemId])
  @@index([zoneId])
}

// Override a nivel Restaurante: el más específico, siempre gana sobre zona y cadena.
model RestaurantMenuOverride {
  id             String  @id @default(uuid())
  restaurantId   String
  templateItemId String

  customPrice Float?   // null = usar precio de zona o base
  isSoldOut   Boolean  @default(false)
  isHidden    Boolean  @default(false)

  restaurant   Restaurant   @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  templateItem TemplateItem @relation(fields: [templateItemId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([restaurantId, templateItemId])
  @@index([restaurantId])
}

// ------------------------------------
// 4. Menú Digital propio del Restaurante
// ------------------------------------
// Las categorías y platillos propios coexisten con los del template.
// Se usan para restaurantes sin cadena o para platillos exclusivos de una sucursal.
model Category {
  id           String @id @default(uuid())
  restaurantId String
  name         String
  order        Int    @default(0)
  isArchived   Boolean @default(false)

  restaurant Restaurant @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  items      MenuItem[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([restaurantId, name])
  @@index([restaurantId])
}

model MenuItem {
  id           String  @id @default(uuid())
  restaurantId String
  categoryId   String
  name         String
  description  String?
  price        Float
  variants     Json    @default("[]") // [{"name":"Chico","price":80},...]
  imageUrl     String?
  isPopular    Boolean @default(false)
  isSoldOut    Boolean @default(false)
  isArchived   Boolean @default(false) // Soft Delete para no romper histórico financiero
  station      Station @default(COCINA)

  restaurant Restaurant  @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  category   Category    @relation(fields: [categoryId], references: [id])
  orderItems OrderItem[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([restaurantId])
  @@index([categoryId])
}

// ------------------------------------
// 5. Personal (Staff) del Restaurante
// ------------------------------------
enum Role {
  ADMIN
  MESERO
  COCINA
  BARRA
}

model Staff {
  id           String  @id @default(uuid())
  restaurantId String
  name         String
  role         Role
  /// @deprecated Login unificado: usar email + passwordHash
  pin          String?
  email        String?  @unique
  passwordHash String?
  isActive     Boolean @default(true)

  restaurant Restaurant @relation(fields: [restaurantId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([restaurantId])
  @@index([email])
}

// ------------------------------------
// 6. Flujo del Comensal & Órdenes (Operación)
// ------------------------------------
model Session {
  id        String  @id @default(uuid())
  tableId   String
  guestName String
  pax       Int
  isActive  Boolean @default(true)

  table       Table               @relation("TableSessions", fields: [tableId], references: [id])
  hostedTable Table?              @relation("TableHost")
  orderItems  OrderItem[]
  payments    Payment[]
  allocations PaymentAllocation[]

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  closedAt  DateTime?

  @@index([tableId])
  @@index([isActive, createdAt])
}

enum OrderStatus {
  PENDING
  PREPARING
  READY
  DELIVERED
  CANCELLED
}

enum Station {
  COCINA
  BARRA
}

model Order {
  id           String      @id @default(uuid())
  restaurantId String
  tableId      String
  guestName    String?
  status       OrderStatus @default(PENDING)
  isShared     Boolean     @default(false)

  restaurant Restaurant  @relation(fields: [restaurantId], references: [id])
  table      Table       @relation(fields: [tableId], references: [id])
  items      OrderItem[]
  payments   Payment[]

  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  deliveredAt DateTime?

  @@index([restaurantId])
  @@index([restaurantId, createdAt])
  @@index([tableId])
  @@index([status, createdAt])
}

model OrderItem {
  id          String  @id @default(uuid())
  orderId     String
  menuItemId  String
  sessionId   String
  quantity    Int     @default(1)
  notes       String?
  variantName String? // "Chico", "Mediano", "Grande" — null si no tiene variantes
  priceAtTime Float

  order    Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  menuItem MenuItem @relation(fields: [menuItemId], references: [id])
  session  Session  @relation(fields: [sessionId], references: [id])
  allocations PaymentAllocation[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([orderId])
  @@index([sessionId])
  @@index([menuItemId])
}

// ------------------------------------
// 7. Pagos (Cuenta y Split Bill)
// ------------------------------------
enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
}

enum PaymentMethod {
  CASH
  CARD
  TRANSFER
  OTHER
}

enum PaymentSplitMode {
  EQUAL
  FULL
}

model Payment {
  id           String           @id @default(uuid())
  restaurantId String
  tableId      String
  sessionId    String
  orderId      String?
  status       PaymentStatus    @default(PENDING)
  method       PaymentMethod    @default(CARD)
  splitMode    PaymentSplitMode @default(FULL)
  splitCount   Int              @default(1)
  paxPaid      Int              @default(1)
  currency     String           @default("MXN")
  subtotal     Float
  tipRate      Float            @default(0)
  tipAmount    Float            @default(0)
  totalAmount  Float
  amountPaid   Float
  notes        String?

  restaurant  Restaurant          @relation(fields: [restaurantId], references: [id], onDelete: Cascade)
  table       Table               @relation(fields: [tableId], references: [id], onDelete: Restrict)
  session     Session             @relation(fields: [sessionId], references: [id], onDelete: Restrict)
  order       Order?              @relation(fields: [orderId], references: [id], onDelete: SetNull)
  allocations PaymentAllocation[]

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  paidAt    DateTime?

  @@index([restaurantId, createdAt])
  @@index([tableId, createdAt])
  @@index([sessionId, createdAt])
  @@index([status, createdAt])
}

model PaymentAllocation {
  id        String  @id @default(uuid())
  paymentId String
  sessionId String?
  guestName String?
  amount    Float

  orderItemId String?
  orderItem   OrderItem? @relation(fields: [orderItemId], references: [id], onDelete: SetNull)

  payment Payment  @relation(fields: [paymentId], references: [id], onDelete: Cascade)
  session Session? @relation(fields: [sessionId], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([paymentId])
  @@index([sessionId])
  @@index([orderItemId])
}

// ------------------------------------
// Plataforma SaaS (por encima de roles de cadena/restaurante)
// ------------------------------------

model SuperAdmin {
  id           String   @id @default(uuid())
  email        String   @unique
  passwordHash String
  name         String?
  isActive     Boolean  @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// ------------------------------------
// 7. Analítica y Ciencia de Datos (Data Science & Telemetry)
// ------------------------------------

// 1. Comportamiento del Consumidor (Telemetría para Sistemas de Recomendación)
model MenuInteraction {
  id              String   @id @default(uuid())
  sessionId       String?  // Nulo si interactuó con el código "Demo" o no abrió sesión completa
  restaurantId    String
  menuItemId      String   // Item que se vio/agregó
  interactionType String   // "VIEW", "ADD_TO_CART", "REMOVE", "AI_RECOMMENDATION_CLICK"
  durationSec     Int?     // Tiempo que se detuvo a ver el producto

  createdAt       DateTime @default(now())

  // Sin foreign keys estrictas (típico en OLAP/Event Logs) para evitar saturar el OLTP
  @@index([restaurantId, createdAt])
  @@index([menuItemId, interactionType])
  @@index([sessionId])
}

// 2. Pronóstico de Demanda (Contraste de modelos ML vs Realidad)
model DemandForecast {
  id             String   @id @default(uuid())
  restaurantId   String
  menuItemId     String
  targetDate     DateTime // Día para el que aplica la predicción
  predictedQty   Int      // Estimación del modelo predictivo (ej. 45 hamburguesas)
  actualQty      Int?     // Venta real (se actualiza al final del día)
  modelName      String   // Ej: "XGBoost_v2", "Prophet_Weather"

  createdAt      DateTime @default(now())

  @@index([restaurantId, targetDate])
}

// 3. Resumen Operativo Diario (KPIs y Aggregations para Dashboards)
model DailySummary {
  id             String   @id @default(uuid())
  restaurantId   String
  date           DateTime // Día de resumen (normalizado a medianoche)
  totalOrders    Int
  totalRevenue   Float
  avgTipRate     Float
  avgTicket      Float
  tablesServed   Int

  createdAt      DateTime @default(now())

  @@unique([restaurantId, date])
}

// 4. Log de Popularidad (Ranking Histórico de Items)
model PopularItemLog {
  id             String   @id @default(uuid())
  restaurantId   String
  menuItemId     String
  date           DateTime // Día del log
  quantitySold   Int
  revenue        Float
  soldOutCount   Int      // Cuántas veces el item tuvo que marcarse soldOut en el tiempo

  createdAt      DateTime @default(now())

  @@unique([restaurantId, date, menuItemId])
}

// 5. Ocupación de Mesas y Churn (Rotación)
model TableOccupancy {
  id                String   @id @default(uuid())
  restaurantId      String
  date              DateTime // Día de resumen
  avgSessionMinutes Float    // Tiempo promedio de estadía
  avgPax            Float    // Promedio de personas por mesa
  peakHour          Int      // Hora del día con más flujo (0-23)
  totalSessions     Int

  createdAt         DateTime @default(now())

  @@unique([restaurantId, date])
}
